Definición más correcta del overflow del lightbox overlay

--- a/sass/components/_lightbox.sass
+++ b/sass/components/_lightbox.sass
@@ -24,7 +24,7 @@
 				padding: 30px 70px
 				position: fixed
 				@include transition($transition)
-				overflow: scroll
+				overflow-y: auto
 				top: 0
 				width: 100%
 				z-index: -1
